--- a/aula 07_02/index.html
+++ b/aula 07_02/index.html
@@ -14,7 +14,7 @@
         <h4>Idade:</h4>
         <p>18</p>
         <h4> Motivo:</h4>
-        <p>a</p>
+        <p>pq sim</p>
     </section>
 </body>
 </html>
