--- a/aula 28_02/index.html
+++ b/aula 28_02/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>aula 1</title>
+    <title>Document</title>
 </head>
 <body>
-    <h3></p>
-    <a href= "https://www.instagram.com/kiwillua">insta</a>
-    <h3></p>
-
+    <h1>Par ou Impar</h1>
+    <input>
+    <button onclick="Enviar()" >Enviar</button>
+    <script src="script.js" ></script>
 </body>
 </html>
